--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -16,7 +16,7 @@
   <div
     class="menu-container"
     style="
-      background-color: var(--bgColor);
+      background-color: var(--bgAbove);
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -24,7 +24,7 @@
       padding: 6px;
       border: solid 1px var(--textColor);
       border-radius: 5px;
-      box-shadow: 3px 3px 5px 2px black;
+      box-shadow: 3px 3px 5px 2px var(--bgBelow);
     "
   >
     <a class="menu-item" href="/"><i>{{ partial "icons/home" . }}</i>Home</a>
