--- a/layouts/partials/breadcrumb.html
+++ b/layouts/partials/breadcrumb.html
@@ -1,27 +1,27 @@
 <div
   class="breadcrumb"
-  style="padding: 12px 0; line-height: 0.85em; text-align: right;"
+  style="padding: 12px 0; line-height: 0.9em; text-align: right;"
 >
   {{ template "breadcrumbnav" (dict "p1" . "p2" .) }}
 </div>
+
 {{ define "breadcrumbnav" }}
 {{ if .p1.Parent }}
 {{ template "breadcrumbnav" (dict "p1" .p1.Parent "p2" .p2 ) }}
 {{ else if not .p1.IsHome }}
 {{ template "breadcrumbnav" (dict "p1" .p1.Site.Home "p2" .p2 ) }}
 {{ end }}
-<span style="font-size: 0.8em;">
-  {{ if .p1.Parent }}/{{- end -}}
+
+<span style="font-size: 0.9em;">
+  {{- if .p1.Parent -}}/{{- end -}}
   <a
     href="{{ if eq .p1 .p2 }}#{{ else }}{{ .p1.Permalink }}{{ end }}"
     class="breadcrumb-link {{ if eq .p1 .p2 }}active{{ end }}"
-    style="margin-left: 5px; font-size: 0.85em; color:{{ if eq .p1 .p2 }}var(--primaryColor){{else}}var(--textColor){{ end }};"
+    style="margin-left: 5px; font-size: 0.9em; color:{{ if eq .p1 .p2 }}var(--primaryHover){{else}}var(--primary){{ end }};"
     >{{- if .p1.IsHome -}}<i>{{- partial "icons/home" . -}}</i>{{- end -}}
-    {{- if gt (len .p1.Title) 15 -}}
-    {{- substr .p1.Title 0 15 -}}...
-    {{- else -}}
-    {{- .p1.Title -}}
-    {{- end -}}</a
+  
+    {{- .p1.Title | truncate 15 -}}
+ </a
   >
 </span>
 {{ end }}
