--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer style="display: flex; flex-direction: column; margin-top: 2em;">
+<footer style="display: flex; flex-direction: column; margin: 2em 0 0 0;">
   <div
     style="
       position: fixed;
@@ -14,13 +14,13 @@
       style="
         display: none;
         transform: rotate(-90deg);
-        background-color: var(--bgLighter);
+        background-color: var(--bgAbove);
         border-radius: 50%;
-        border: solid 2px var(--primaryColor);
+        border: solid 2px var(--primary);
         padding: 10px;
         position: absolute;
         cursor: pointer;
-        right: 0;
+        right: 10px;
         font-size: 1.25em;
       "
       >{{ partial "icons/chevron" . }}</i
@@ -36,9 +36,10 @@
   {{ end }}
   <div
     style="
-      font-size: 0.8em;
-      background-color: var(--bgDarker);
-      box-shadow: 0px 0px 2px 2px black;
+      font-size: 0.9em;
+      background-color: var(--bgAbove);
+      box-shadow: 0px 0px 2px 2px var(--bgBelow);
+      padding-bottom: 5px;
     "
   >
     <div style="display: flex; flex-wrap: wrap;">
