--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -22,10 +22,7 @@
   {{ end -}}
 
   <link rel="stylesheet" href="{{ `/css/main.css` | relURL }}" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Mukta:wght@300;700&display=swap"
-    rel="stylesheet"
-  />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Fira+Code&display=swap" rel="stylesheet"> 
 
   <style>
     html {
