--- a/layouts/partials/intro.html
+++ b/layouts/partials/intro.html
@@ -5,7 +5,7 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    color: var(--primaryColor);
+    color: var(--primary);
     text-align: center;
     margin-bottom: 1em;
   "
