added alt text for main and profile image

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,6 +24,7 @@
       max-height: 300px;
       transform: none;
     "
+    alt="main image of {{ .Site.Params.title }}"
   />
   {{ partial "social.html" . }}
   <span style="text-align: center;">{{ .Site.Params.shortAbout }}</span>
