--- a/layouts/section/about.html
+++ b/layouts/section/about.html
@@ -2,6 +2,7 @@
 {{ partial "social" . }}
 <img
   src="{{ .Params.profileImage }}"
+  alt="profile image of {{ .Site.Params.author }}"
   style="
     display: block;
     margin: 1em auto 0 auto;
